<resources>
    <string name="app_name">AndroidHealth</string>
    <string name="title_main">Main</string>
    <string name="title_steps">Шаги</string>
    <string name="title_pulse">Пульс</string>
    <string name="title_sleep">Сон</string>
    <string name="title_sample">Coming soon</string>
    <string name="title_details">To details</string>
    <string name="title_profile">To profile</string>
    <string name="title_app_theme">Тема приложения</string>
    <string name="title_logout">Выйти из аккаунта</string>
    <string name="title_dark_theme">Тёмная тема</string>
    <string name="title_profile_view">Обзор</string>
    <string name="title_steps_left">Осталось %s шагов</string>

    <string name="health_advice_title">Советы по здоровью</string>
    <string name="health_advice_message">Если вы ежедневно проходите более 8000 шагов, это может приносить пользу здоровью.</string>

    <string name="title_sleep_analysis">Анализ качества сна</string>
    <string name="title_sleep_z">Z</string>
    <string name="title_sleep_too_late">Вы легли спать слишком поздно</string>
    <string name="title_sleep_advice">Ложитесь спать до 22:00.\nЗасиживание допоздна может нанести вред имунной системе.</string>

    <string name="steps_distance_title">Дистанция ходьбы</string>
    <string name="steps_distance_message">Ваша средняя дистанция ходьбы и бега составила %s км за последние 7 дней</string>
    <string name="title_average_distance">Средняя дистанция</string>
    <string name="title_average_distance_value">\u00A0км</string>

    <string name="title_today">Сегодня</string>
    <string name="title_sleep_decoration">Zzz..</string>
    <string name="title_tab_steps_message">Осталось %s шагов\nдо достижения цели </string>
    <string name="title_tab_pulse_message">Среднее значение\nПульс в покое</string>
    <string name="title_tab_sleep_message">Вы спали лучше,\nчем 21% пользователей</string>

    <string name="title_pulse_measure">Измерение пульса</string>
    <string name="pulse_calm">В покое</string>
    <string name="pulse_light_activity">Легкая активность</string>
    <string name="pulse_fat_burning">Сжигание жира</string>
    <string name="pulse_aerobic">Аэробная</string>
    <string name="pulse_anaerobic">Анаэробная</string>
    <string name="pulse_maximal_oxygen_consumption">МПК</string>
</resources>