<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <com.example.androidhealth.ui.view.AppToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:btnSelectorBg="@drawable/selector_button_component_bg"
        app:toolbarBg="@color/mainBackground" />

    <ImageView
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_person_1"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="Ольга Кудрявцева"
        android:textAppearance="@style/Text.Bold.28" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="16dp"
        app:cardBackgroundColor="@color/componentBackground"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:contentPadding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_app_theme"
                android:textAppearance="@style/Text.Regular.12.SecondaryColor" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/theme_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_dark_theme"
                android:textAppearance="@style/Text.Medium.18" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:padding="20dp"
        android:text="@string/title_logout"
        android:textAppearance="@style/Text.Regular.14"
        android:textColor="@color/accent"
        app:drawableStartCompat="@drawable/ic_logout"
        app:drawableTint="@color/accent" />
</LinearLayout>